# CampusConnect

./: .env.example  .gitignore  Makefile  README.md
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init_extensions_and_core_tables.py  0002_rls_policies.py  0003_seed_plans.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/db/: base.py  session.py  tenant_filter.py
apps/api/app/middleware/: request_id.py
apps/api/app/models/: __init__.py  audit_log.py  mixins.py  organization.py  plan.py  user.py
apps/api/app/observability/: otel.py  sentry.py
apps/api/app/routers/: health.py  metrics.py
apps/api/app/scripts/: seed.py
apps/api/app/worker/: beat_schedule.py  celery_app.py
apps/api/app/worker/tasks/: hello.py
apps/api/tests/: conftest.py  test_app_bootstrap.py  test_beat_schedule.py  test_health.py  test_hello_task.py  test_metrics.py  test_migrations.py  test_mixins.py  test_models.py  test_otel.py  test_request_id.py  test_rls.py  test_scaffold.py  test_seed.py  test_sentry.py  test_session.py  test_tenant_filter.py
apps/beat/: Dockerfile  README.md
apps/web/: instrumentation.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  sentry.client.config.ts  sentry.server.config.ts
apps/web/e2e/: signup-login.spec.ts
apps/web/src/: auth.ts  middleware.ts  proxy.ts
apps/web/src/app/: page.tsx
apps/web/src/app/api/health/: route.ts
apps/web/src/app/app/: layout.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/signup/: page.tsx
apps/web/src/components/: app-shell.tsx
apps/web/src/lib/: db.ts  env.ts
apps/worker/: Dockerfile  README.md
docs/: architecture.md  runbook.md
docs/superpowers/plans/: 2026-05-17-phase-m0-foundations.md
docs/superpowers/specs/: 2026-05-17-campusconnect-design.md
infra/: README.md  docker-compose.yml
infra/docker/postgres-pgvector/: Dockerfile
