[project]
name = "campusconnect-api"
version = "0.1.0"
description = "CampusConnect API service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.0",
  "celery>=5.4.0",
  "redis>=5.2.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.12",
  "sentry-sdk[fastapi,celery,sqlalchemy]>=2.18.0",
  "opentelemetry-distro>=0.49b0",
  "opentelemetry-exporter-otlp>=1.28.0",
  "opentelemetry-instrumentation-fastapi>=0.49b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
  "opentelemetry-instrumentation-celery>=0.49b0",
  "opentelemetry-instrumentation-redis>=0.49b0",
  "prometheus-client>=0.21.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF", "S"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.worker.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
